--- a/frontend/src/app/list-weapons/list-weapons.page.html
+++ b/frontend/src/app/list-weapons/list-weapons.page.html
@@ -1,12 +1,12 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Bicycle List</ion-title>
+    <ion-title>Weapon List</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <ion-list>
-    <ion-item *ngFor="let b of bicycles">
+    <ion-item *ngFor="let b of weapons">
       <ion-avatar slot="start">
         <img *ngIf="b.filename" src="http://localhost:8080/images/{{b.filename}}" alt="image"/>
       </ion-avatar>
@@ -18,7 +18,7 @@
   </ion-list>
 
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-    <ion-fab-button (click)="addBicycle()">
+    <ion-fab-button (click)="addWeapon()">
       <ion-icon name="add-outline"></ion-icon>
     </ion-fab-button>
   </ion-fab> 
