--- a/frontend/src/app/list-weapons/list-weapons.page.html
+++ b/frontend/src/app/list-weapons/list-weapons.page.html
@@ -11,8 +11,9 @@
         <img *ngIf="b.filename" src="http://localhost:8080/images/{{b.filename}}" alt="image"/>
       </ion-avatar>
       <ion-label>
-        <h1>{{b.brand}}</h1>
-        <p>{{b.model}}</p>
+        <h1>{{b.type}}</h1>
+        <p>{{b.element}}</p>
+        <p>{{b.monster}}</p>
       </ion-label>
     </ion-item>
   </ion-list>
