--- a/frontend/src/app/list-weapons/list-weapons.page.scss
+++ b/frontend/src/app/list-weapons/list-weapons.page.scss
@@ -2,3 +2,31 @@
    --border-radius: 4px;
    border: gray solid 1px;
  }
+ ion-grid {
+  ion-row {
+    ion-col.foto {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      .photo-frame {
+        width: 40vw;
+        height: auto;
+        max-width: 300px;
+        max-height: 300px;
+        object-fit: contain;
+      }
+    }
+
+    ion-col.columna {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      ion-button {
+        margin: 10px 0; /* Adjust the margin as needed */
+      }
+    }
+  }
+}
+.wer{
+  margin-bottom: 50px;
+}
