--- a/frontend/src/app/list-weapons/list-weapons.page.html
+++ b/frontend/src/app/list-weapons/list-weapons.page.html
@@ -70,9 +70,13 @@
         <p>{{b.element}}</p>
         <p>{{b.monster}}</p>
       </ion-label>
-      <ion-button color="danger" fill="outline" (click)="deleteWeapon(b.id)">Delete</ion-button>
-      <ion-button color="primary" fill="outline" (click)="updateWeapon(b.id)">Update</ion-button>
-      <ion-button color="success" fill="outline" (click)="loadUpgrades(b.id)">Show Upgrades</ion-button>
+      <div class="qwe">
+        <div class="duo">
+          <ion-button color="danger" fill="outline" (click)="deleteWeapon(b.id)">Delete</ion-button>
+          <ion-button color="primary" fill="outline" (click)="updateWeapon(b.id)">Update</ion-button>
+        </div>
+        <ion-button color="success" fill="outline" (click)="loadUpgrades(b.id)">Show Upgrades</ion-button>
+      </div>
       <ion-col>
         <ion-list *ngIf="weaponClicked === b.id">
           <ion-card *ngFor="let upgrade of upgradesList">
@@ -84,10 +88,22 @@
               <ion-button color="danger" fill="clear" (click)="eliminarUpgrade(upgrade)">X</ion-button>
             </ion-item>
           </ion-card>
+          <ion-card>
+            <ion-item>
+              <ion-label position="stacked">Tier</ion-label>
+              <ion-input type="text" name="tier" [(ngModel)]="newUpgrade.tier"></ion-input>
+            </ion-item>
+            <ion-item>
+              <ion-label position="stacked">Jewels</ion-label>
+              <ion-input type="text" name="jewels" [(ngModel)]="newUpgrade.jewels"></ion-input>
+            </ion-item>
+            <ion-item>
+              <ion-button expand="block" color="primary" (click)="agregarUpgrades()">Agregar</ion-button>
+            </ion-item>
+          </ion-card>
         </ion-list>
-        
       </ion-col>
-      
+
 
     </ion-item>
   </ion-list>
